@startuml
package Utilisateurs {

    class User {
        - id : int
        - email : string
        - role : Role
        + isAdmin() : bool
        + isClient() : bool
    }

    class Admin {
        - user : User
        + gererProduits()
        + gererCommandes()
    }

    class Client {
        - user : User
        + passerCommande()
        + gererPanier()
    }

    Admin --> User : délègue
    Client --> User : délègue
}
@enduml